# ncs_watch

./: .gitignore  Dockerfile  README.md  ncs_watch.py  ncs_watch_run.sh  pyproject.toml
examples/: ncs_watch_spec.yml
src/ncs_watch/: __init__.py  __main__.py  __version__.py  commands.py
src/ncs_watch/loader/: models.py
